<resources>
    <string name="app_name">Calc</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_equals">=</string>
    <string name="key_divide">/</string>
    <string name="key_multiply">x</string>
    <string name="key_sum">+</string>
    <string name="key_minus">—</string>
    <string name="_123">123</string>
    <string name="_0">0</string>
    <string name="_0123456789">0123456789</string>
    <string name="T3" />
    <string name="theme_1">theme 1</string>
    <string name="theme_2">theme 2</string>
    <string name="theme_3">theme 3</string>
    <string name="theme_select">theme select</string>
</resources>