<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_norm_size"
    android:orientation="vertical"
    tools:ignore="ExtraText">


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/resultViewSizeTemp"
        android:gravity="bottom|end"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="@dimen/resultTextViewSize"

    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        >


        <com.google.android.material.button.MaterialButton

            android:id="@+id/theme_select"
            android:layout_width="match_parent"
            app:cornerRadius="25dp"
            android:layout_height="wrap_content"
            android:text="@string/theme_select"
            android:padding="5dp"
            android:textSize="20sp"
            style="?attr/calcActionButton"
            />



    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:columnCount="4"
        tools:context="ui.CalculatorActivity">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            android:text="@string/key_7"
            style="?attr/calcButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcButton"
            android:text="@string/key_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcButton"
            android:text="@string/key_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_div"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcActionButton"
            android:text="@string/key_divide" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcButton"
            android:text="@string/key_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcButton"
            android:text="@string/key_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcButton"
            android:text="@string/key_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_mult"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcActionButton"
            android:text="@string/key_multiply" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcButton"
            android:text="@string/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcButton"
            android:text="@string/key_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcButton"
            android:text="@string/key_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_minus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcActionButton"
            android:text="@string/key_minus" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            style="?attr/calcButton"
            android:text="@string/key_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_dot"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcActionButton"
            android:text="@string/key_dot" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcActionButton"
            android:text="@string/key_equals" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonSize"
            android:layout_columnWeight="1"
            style="?attr/calcActionButton"
            android:text="@string/key_sum" />

    </GridLayout>

</LinearLayout>